<resources>
    <string name="app_name">Play list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="talk_me_down">Talk Me Down</string>
    <string name="blue_neighborhood">Blue Neighborhood</string>
    <string name="_1">1</string>
    <string name="blank_space">Blank Space</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="_3_22">3:22</string>
</resources>