<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_1"
    tools:context=".FirstFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="2sp"
        android:textFontWeight="900"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationY="-1.04sp"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/preview"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/abeezee_italic"
        android:gravity="top"
        android:textFontWeight="400"
        android:lineSpacingExtra="1sp"
        android:text="@string/talk_me_down"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:translationY="-0.41sp"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/preview2"
        android:layout_width="325dp"
        android:layout_height="22dp"
        android:layout_marginStart="28dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="37dp"
        android:textColor="@color/white"
        android:text="@string/blue_neighborhood"
        android:textSize="16sp"
        android:textFontWeight="400"
        android:fontFamily="@font/abeezee_italic"
        android:lineSpacingExtra="3sp"
        android:letterSpacing="0.03"
        android:translationY="-1.54sp"
        tools:targetApi="p" />

</FrameLayout>