<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/posts"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/some_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:layout_gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/_1"
            android:textColor="@color/dark"
            android:textFontWeight="900"
            android:textSize="16sp"
            tools:targetApi="p" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/blank_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textFontWeight="900"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="2sp"
                android:text="@string/blank_space"
                android:textColor="@color/dark"
                android:textSize="16sp"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/taylor_swif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textFontWeight="300"
                android:lineSpacingExtra="3sp"
                android:text="@string/taylor_swift"
                android:textColor="@color/dark"
                android:textSize="12sp"
                tools:targetApi="p" />
        </LinearLayout>


        <TextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="3sp"
            android:layout_gravity="center_vertical"
            android:textFontWeight="300"
            android:text="@string/_3_22"
            android:textColor="@color/dark"
            android:textSize="12sp"
            tools:targetApi="p" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_style"
        android:orientation="horizontal" />

</LinearLayout>